<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_CDCCCC"
    tools:context=".ui.HomeActivity">

    <include
        layout="@layout/element_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvEnglish"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_8dp"
            card_view:cardBackgroundColor="@color/color_8A9A5B"
            card_view:cardCornerRadius="@dimen/dimen_4dp"
            card_view:cardElevation="@dimen/dimen_4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_english"
                android:textAppearance="@style/CustomTextAppearance.Black"
                android:textColor="@color/color_000000"
                android:textSize="@dimen/font_18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvMath"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_8dp"
            card_view:cardBackgroundColor="@color/color_800080"
            card_view:cardCornerRadius="@dimen/dimen_4dp"
            card_view:cardElevation="@dimen/dimen_4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_math"
                android:textAppearance="@style/CustomTextAppearance.Black"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/font_18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvEs"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_8dp"
            card_view:cardBackgroundColor="@color/color_FF0000"
            card_view:cardCornerRadius="@dimen/dimen_4dp"
            card_view:cardElevation="@dimen/dimen_4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_es"
                android:textAppearance="@style/CustomTextAppearance.Black"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/font_18sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvSpotTheDiffence"
            android:layout_width="240dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dimen_8dp"
            card_view:cardBackgroundColor="@color/color_045c84"
            card_view:cardCornerRadius="@dimen/dimen_4dp"
            card_view:cardElevation="@dimen/dimen_4dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_fun_activity"
                android:textAppearance="@style/CustomTextAppearance.Black"
                android:textColor="@color/color_FFFFFF"
                android:textSize="@dimen/font_18sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>